--- a/car_game.html
+++ b/car_game.html
@@ -26,6 +26,26 @@
           this.mileage = this.mileage + 8;
 
           alert("New mileage: " + this.mileage);
+        },
+
+        driveAroundWorld: function() {
+          alert("Old Mileage: " + this.mileage);
+
+          this.mileage = this.mileage + 24000;
+
+          alert("New Mileage: " + this.mileage);
+          alert("Car needs a tuneup!");
+
+          this.isWorking = false;
+        },
+
+        getTuneUp: function() {
+          alert("Car is ready to go!");
+          this.isWorking = true;
+        },
+
+        honk: function() {
+          alert("Honk! Honk!");
         }
 
       };
