--- a/car_game.html
+++ b/car_game.html
@@ -49,3 +49,22 @@
         }
 
       };
+
+
+      // FUNCTIONS
+
+      // Logs all of our car's current stats to the console.
+      function reWriteStats() {
+        console.log("Make: " + car.make);
+        console.log("Model: " + car.model);
+        console.log("Color:" + car.color);
+        console.log("Mileage: " + car.mileage);
+        console.log("Is Working: " + car.isWorking);
+        console.log("------------------------------");
+      }
+
+
+        </script>
+
+    </body>
+</html>
