--- a/car_game.html
+++ b/car_game.html
@@ -63,6 +63,23 @@
         console.log("------------------------------");
       }
 
+      // MAIN PROCESS
+      // ==============================================================================
+
+      // Captures keyboard input. Depending on the letter pressed it will "call" (execute) different functions.
+      document.onkeyup = function(event) {
+
+        // Captures the key press, converts it to lowercase, and saves it to a variable.
+        var letter = event.key.toLowerCase();
+
+        // If the letter is h, run the following functions/methods.
+        if (letter === "h") {
+            car.honk();
+            reWriteStats();
+        }
+        
+      };
+
 
         </script>
 
