--- a/car_game.html
+++ b/car_game.html
@@ -77,7 +77,19 @@
             car.honk();
             reWriteStats();
         }
-        
+
+        // If the letter is d, run the following functions/methods.
+        if (letter === "d") {
+          car.driveToWork();
+          reWriteStats();
+        }
+
+        // If the letter is w, run the following functions/methods.
+        if (letter === "w") {
+          car.driveAroundWorld();
+          reWriteStats();
+        }
+
       };
 
 
