getTuneUp if statement added

--- a/car_game.html
+++ b/car_game.html
@@ -90,6 +90,12 @@
           reWriteStats();
         }
 
+        // If the letter is t, run the following functions/methods.
+        if (letter === "t") {
+          car.getTuneUp();
+          reWriteStats();
+        }
+
       };
 
 
